--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
 spring:
   application:
     name: provider
+
 eureka:
   environment: dev
   instance:
@@ -11,3 +12,22 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:8761/eureka/
+      
+#druid:
+#  name: test
+#  url: jdbc:mysql://localhost:3306/WwdMysqlTest?useUnicode=true&amp;characterEncoding=utf-8&useSSL=false
+#  username: root
+#  password: root
+#  validationQuery: select 1 from dual
+#  initialSize: 1
+#  maxWait: 60000
+#  minIdle: 1
+#  testWhileIdle: true
+#  testOnBorrow: false
+#  testOnReturn: false
+#  poolPreparedStatements: true
+#  maxOpenPreparedStatements: 20
+#  
+#mybatis:
+#  typeAliasesPackage: com.wwd.model
+#  configLocation: classpath:META-INF/spring/mybatis-config.xml
